--- a/style.css
+++ b/style.css
@@ -1,11 +1,46 @@
 body {
-    background-color: #23272a;
-    margin: 30px;
+    background-color: #2c2f33;
+}
+
+.notification {
+    background-color: red;
+}
+
+.box {
+    margin-bottom: 40px;
 }
 
 main {
+    display: inline-block;
     background-color: #2c2f33;
+    width: 70%;
     padding: 30px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.side-nav {
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 20px;
+    background-color: #23272a;
+    display: inline-block;
+    vertical-align: top;
+    max-width: 20%;
+    height: max;
+}
+
+.nav-header {
+    text-align: center;
+    border-bottom: solid #FFF;
+}
+
+.nav-list {
+    padding-top: 5px;
+}
+
+.main-nav {
+    padding-left: 0;
 }
 
 .title-bg {
